# spectrum

./: .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: ci.yml
algebra-core/: Cargo.toml
algebra-core/src/: combinators.rs  (+2 more)
conf/: log4rs.yaml
docs/: Connector.md  ConsensusDriver.md  ConsensusHandler.md  Interop.md  ModifierValidation.md  Networking.md  OnChainLottery.md  OnChainSettlement.md  ProjectStructure.md  SpectrumNetwork.md
ergo-vault-test-tool/: Cargo.toml
ergo-vault-test-tool/src/: main.rs  withdrawal_tx.rs
futures-util/: Cargo.toml
mock-consensus-driver/: Cargo.toml  README.md
mock-consensus-driver/.config/: config.json5
mock-consensus-driver/src/: action.rs  app.rs  color_scheme.rs  components.rs  config.rs  event.rs  main.rs
mock-consensus-driver/src/components/: home.rs
sim/: .scalafmt.conf  build.sbt
spectrum-cardano-connector/: Cargo.toml  build.rs
spectrum-cardano-connector/aiken/vault/: README.md  aiken.toml  plutus.json
spectrum-cardano-connector/aiken/vault/lib/vault/: types.ak
spectrum-cardano-connector/aiken/vault/validators/: verify_spectrum_report.ak
spectrum-cardano-connector/resources/: serialized_cardano_blocks
spectrum-cardano-connector/src/: lib.rs  rocksdb.rs  script.rs
spectrum-chain-connector/: Cargo.toml
spectrum-chain-connector/src/: lib.rs
spectrum-consensus/: Cargo.toml
spectrum-crypto/: Cargo.toml
spectrum-crypto/src/: digest.rs  hash.rs  lib.rs  pubkey.rs  signature.rs
spectrum-data-bridge/: Cargo.toml
spectrum-data-bridge/src/: lib.rs
spectrum-data-bridge/src/data_bridge/: ergo.rs
spectrum-diffusion/: Cargo.toml
spectrum-ergo-connector/: Cargo.toml
spectrum-ergo-connector/contracts/: deposit.sc  signature_verification.sc  signature_verification_patched.sc  withdrawal_and_deposit.sc
spectrum-ergo-connector/src/: committee.rs  data.rs  data_bridge.rs  deposit.rs  ergo_connector.rs  lib.rs  main.rs  rocksdb.rs  script.rs  sigma_rust_test.rs  tx_event.rs  tx_in_progress.rs  vault.rs  vault_handler.rs  vault_utxo.rs
spectrum-ergo-connector/src/data_bridge/: ergo.rs
spectrum-ergo-connector/src/rocksdb/: deposit.rs  deposits.rs  ergo_tx_event_history.rs  moved_value_history.rs  tx_retry_scheduler.rs  vault_boxes.rs  withdrawals.rs
spectrum-handel/: Cargo.toml
spectrum-kes/: Cargo.toml
spectrum-kes/src/: README.md  composition_utils.rs  kes.rs  lib.rs  prod_comp.rs  sum_comp.rs  tests.rs  utils.rs
spectrum-ledger/: Cargo.toml
spectrum-ledger/src/: block.rs  cell.rs  consensus.rs  eval.rs  interop.rs  ledger.rs  ledger_view.rs  lib.rs  linking.rs  merkle_tree.rs  sbox.rs  transaction.rs  validation.rs
spectrum-ledger/src/ledger_view/: history.rs  state.rs
spectrum-mcast/: Cargo.toml
spectrum-mcast/src/: behaviour.rs  lib.rs  overlay.rs
spectrum-move/: Cargo.toml
spectrum-network/: Cargo.toml
spectrum-network/src/: atomic_protocol_upgrade.rs  functionality.rs  lib.rs  network_controller.rs  one_shot_upgrade.rs  peer.rs  peer_conn_handler.rs  peer_connection.rs  peer_manager.rs  protocol.rs  protocol_api.rs  protocol_handler.rs  protocol_upgrade.rs  routing.rs  types.rs
spectrum-network/src/peer/: data.rs  peer_in_state.rs  peer_manager.rs  peer_state.rs  peer_store.rs  peers_state.rs  types.rs
spectrum-network/src/peer_conn_handler/: message_sink.rs
spectrum-network/src/peer_connection/: data.rs  peer_manager.rs  peer_state.rs  peer_store.rs  types.rs
spectrum-network/src/peer_manager/: data.rs  peer_index.rs  peer_store.rs  peers_state.rs
spectrum-network/src/protocol/: combinators.rs  notifications.rs  substream.rs  sync.rs  upgrade.rs
spectrum-network/src/protocol/notifications/: behaviour.rs  handler.rs
spectrum-network/src/protocol/sync/: data.rs
spectrum-network/src/protocol_handler/: aggregation.rs  codec.rs  cosi.rs  diffusion.rs  discovery.rs  fake_sync.rs  handel.rs  multicasting.rs  pool.rs  sigma_aggregation.rs  sync.rs  versioning.rs  void.rs
spectrum-network/src/protocol_handler/cosi/: message.rs
spectrum-network/src/protocol_handler/diffusion/: delivery.rs  message.rs  service.rs  types.rs
spectrum-network/src/protocol_handler/discovery/: message.rs
spectrum-network/src/protocol_handler/handel/: message.rs  partitioning.rs  pertitioning.rs  protocol.rs
spectrum-network/src/protocol_handler/multicasting/: overlay.rs
spectrum-network/src/protocol_handler/sigma_aggregation/: crypto.rs  message.rs  types.rs
spectrum-network/src/protocol_handler/sync/: message.rs
spectrum-network/src/protocol_upgrade/: combinators.rs  handshake.rs  message.rs  substream.rs  supported_protocol_vers.rs
spectrum-network/tests/: integration_tests.rs  peer_states_tests.rs  peer_store_tests.rs  tests.rs
spectrum-network/tests/generators/: mod.rs
spectrum-network/tests/integration_tests/: aggregation.rs  fake_sync.rs  fake_sync_behaviour.rs  mod.rs  multicasting.rs
spectrum-network/tests/peer/: mod.rs  peer_state_tests.rs
spectrum-network/tests/peer_manager/: peer_state_tests.rs
spectrum-node/: Cargo.toml
spectrum-node/src/: bridge.rs  consensus.rs  main.rs  node_view.rs
spectrum-sigma/: Cargo.toml
spectrum-sigma-aggregation/: Cargo.toml  README.md
spectrum-sigma-aggregation/conf_example/: form_new_committee.yaml
spectrum-sigma-aggregation/src/: main.rs
spectrum-validation/: Cargo.toml
spectrum-validation/src/: lib.rs  rules.rs  validation.rs
spectrum-view/: Cargo.toml
spectrum-view/src/: chain.rs  history.rs  lib.rs  node_view.rs  state.rs  validation.rs  versioned_avl_storage.rs
spectrum-view/src/state/: eval.rs  linking.rs  validation.rs
spectrum-view/src/versioned_avl_storage/: versioned_storage.rs
spectrum-vm/: Cargo.toml
spectrum-vm/src/: executor.rs  lib.rs
spectrum-vm/src/executor/: gas_cost.rs  native_functions.rs  scripts_executor.rs
spectrum-vm/src/models/: script.rs
spectrum-vm/tests/: tests.rs
spectrum-vm/tests/executor/: executor_tests.rs  mod.rs
spectrum-vrf/: Cargo.toml  README.md
validate-ergo-signature-aggregation/: .scalafmt.conf  Dockerfile  build.sbt
(+76 files in other folders)
