[package]
name = "mock-consensus-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "0.2.1"
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
derive_deref = "1.1.1"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = { version = "0.25.0", features = ["serde", "macros"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-unix-ipc = { git = "https://github.com/mitsuhiko/tokio-unix-ipc", branch = "main", features = ["bootstrap", "serde"] }
ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", features = ["arbitrary", "json"], rev = "a360b255f8780d3ae9e6da44266c774e6e4055c5" }
spectrum-chain-connector = { version = "0.1.0", path = "../spectrum-chain-connector" }
k256 = { version = "0.13.*", features = ["serde", "arithmetic", "expose-field", "hash2curve"] }
spectrum-crypto = { version = "0.1.0", path = "../spectrum-crypto" }
spectrum-ergo-connector = { version = "0.1.0", path = "../spectrum-ergo-connector" }
spectrum-handel = { version = "0.1.0", path = "../spectrum-handel" }
spectrum-ledger = {version = "0.1.0", path = "../spectrum-ledger"}
spectrum-sigma = { version = "0.1.0", path = "../spectrum-sigma" }
json5 = "0.4.1"
log = "0.4.17"
log4rs = "1.2.0"
futures = "0.3.29"
rand = "0.8.5"
serde = "1.0.193"
tokio-util = "0.7.10"
signal-hook = { version = "0.3.17", features = [] }
config = { version = "0.13.4", features = [] }
serde_json = "1.0.108"
pretty_assertions = "1.4.0"
serde_yaml = "0.8.26"
