[package]
name = "spectrum-chain-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-ledger = { version = "0.1.0", path = "../spectrum-ledger" }
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"
