[package]
name = "spectrum-crypto"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
rand = "0.8.5"
smallvec = "1.10.0"
derive_more = "0.99.17"
either = "1.8.1"
base16 = "0.2.1"
sha2 = "0.10.6"
blake2 = "0.10.6"
thiserror = "1.0.34"
serde = { version = "1.0.147", features = ["derive"] }
elliptic-curve = "0.11.*"
k256 = "0.11.*"