[package]
name = "spectrum-ergo-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12"
async-trait = "0.1.68"
base16 = "0.2"
base64 = "0.21.3"
bincode = "1.3"
bytes = "1.0.1"
clap = { version = "4.4", features = ["derive"] }
derive_more = "0.99"
ergo-chain-sync = { git = "https://github.com/spectrum-finance/spectrum-offchain-ergo", branch = "update_rocksdb" }
spectrum-deploy-lm-pool = { git = "https://github.com/spectrum-finance/spectrum-offchain-ergo", branch = "update_rocksdb" }
spectrum-offchain = { git = "https://github.com/spectrum-finance/spectrum-offchain-ergo", branch = "update_rocksdb" }
spectrum-offchain-lm = { git = "https://github.com/spectrum-finance/spectrum-offchain-ergo", branch = "update_rocksdb" }
spectrum-chain-connector = { version = "0.1.0", path = "../spectrum-chain-connector" }
spectrum-crypto = { version = "0.1.0", path = "../spectrum-crypto" }
spectrum-move = { version = "0.1.0", path = "../spectrum-move" }
spectrum-sigma = { version = "0.1.0", path = "../spectrum-sigma" }
spectrum-handel = { version = "0.1.0", path = "../spectrum-handel" }
spectrum-ledger = {version = "0.1.0", path = "../spectrum-ledger"}
scorex_crypto_avltree = "0.1.0"
indexmap = "1.9.2"
isahc = { version = "1.7.2", features = ["json"] }
nonempty = "0.8.1"
futures = "0.3.28"
rocksdb = "0.21"
tokio = { version = "1.27.0", features = ["full"] }
tokio-unix-ipc = { git = "https://github.com/mitsuhiko/tokio-unix-ipc", branch = "main", features = ["bootstrap", "serde"] }
ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", features = ["arbitrary", "json"], rev = "a360b255f8780d3ae9e6da44266c774e6e4055c5" }
sigma-ser = "0.13.1" 
elliptic-curve = "0.13.5"
sha2 = "0.10.7"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
k256 = { version = "0.13.*", features = ["serde", "arithmetic", "expose-field", "hash2curve"] }
num256 = "0.3.5"
blake2 = "0.10.6"
num-bigint = "0.4"
num-traits = "0.2"
itertools = "0.11"
tracing = "0.1.37"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["gzip"] }
serde_with = { version = "2.1", features = ["chrono_0_4"] }
bounded-integer = { version = "0.5.3", features = ["serde1"] }
chrono = "0.4.23"
serde_yaml = "0.9"
tokio-stream = "0.1.14"
rand = "0.8.5"
async-stream = "0.3.5"
rmp-serde = "1.1.2"

[dev-dependencies]
reqwest = "0.11"
sigma-test-util = "0.3"

[profile.test]
opt-level = 3