[package]
name = "spectrum-kes"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
spectrum-crypto = { version = "0.1.0", path = "../spectrum-crypto" }
spectrum-vrf = { version = "0.1.0", path = "../spectrum-vrf" }
blake2 = "0.10.6"
bigint = "4.4.3"
ecdsa = "0.16.7"
elliptic-curve = "0.13.*"
k256 = "0.13.*"