[package]
name = "spectrum-ledger"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
spectrum-crypto = { version = "0.1.0", path = "../spectrum-crypto" }
spectrum-move = { version = "0.1.0", path = "../spectrum-move" }
serde = { version = "1.0.147", features = ["derive"] }
derive_more = "0.99.17"
k256 = { version = "0.13.*", features = ["serde"] }

move-core-types.workspace = true
