[package]
name = "spectrum-ledger"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
spectrum-crypto = { version = "0.1.0", path = "../spectrum-crypto" }
spectrum-move = { version = "0.1.0", path = "../spectrum-move" }
futures = "0.3.21"
serde = { version = "1.0.147", features = ["derive"] }
derive_more = "0.99.17"
k256 = { version = "0.13.*", features = ["serde"] }
async-trait = "0.1.68"
bincode = "1.3.3"
async-std = "1.12.0"
nonempty = { version = "0.8.1", features = ["serialize"] }

move-core-types.workspace = true
