[package]
name = "spectrum-mcast"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

[dependencies]
spectrum-crypto = { version = "0.1.0", path = "../spectrum-crypto" }
spectrum-handel = { version = "0.1.0", path = "../spectrum-handel" }
spectrum-network = { version = "0.1.0", path = "../spectrum-network" }
algebra-core = { version = "0.1.0", path = "../algebra-core" }
rand = "0.8.5"
smallvec = "1.10.0"
derive_more = "0.99.17"
either = "1.8.1"
base16 = "0.2.1"
sha2 = "0.10.6"
blake2 = "0.10.6"
thiserror = "1.0.34"
nonempty = "0.8.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_with = "3.0.0"
elliptic-curve = "0.13.*"
ciborium = "0.2.1"
k256 = { version = "0.13.*", features = ["serde"] }
libp2p = { version = "0.52.0", features = ["noise", "yamux", "secp256k1", "serde"] }
libp2p-identity = { version = "0.2.*", features = ["peerid", "secp256k1"] }
libsecp256k1 = "0.7.1"
async-trait = "0.1.68"
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.21"
tokio = {version = "1.28.*", features = ["time", "rt", "macros", "rt-multi-thread", "tracing"] }
console-subscriber = "0.1.10"
tracing = "0.1.37"
tracing-subscriber = "0.3"