[package]
name = "spectrum-network"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.49.0", features = ["noise", "yamux"] }
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
unsigned-varint = { version = "0.7.1", features = ["futures", "asynchronous_codec"] }
asynchronous-codec = "0.6.0"
pin-project = "1.0.10"
void = "1.0.2"
thiserror = "1.0.34"
log = "0.4.17"
log4rs = "1.2.0"
rand = "0.8.5"
wasm-timer = "0.2.5"
