[package]
name = "spectrum-network"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[features]
test_peer_punish_too_slow = []
integration_tests = []

[dependencies]
algebra-core = { version = "0.1.0", path = "../algebra-core" }
spectrum-crypto = { version = "0.1.0", path = "../spectrum-crypto" }
libp2p = { version = "0.51.*", features = ["noise", "yamux"] }
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
unsigned-varint = { version = "0.7.1", features = ["futures", "asynchronous_codec"] }
asynchronous-codec = "0.6.0"
pin-project = "1.0.10"
void = "1.0.2"
thiserror = "1.0.34"
log = "0.4.17"
log4rs = "1.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
wasm-timer = "0.2.5"
serde = { version = "1.0.147", features = ["derive"] }
ciborium = "0.2.0"
smallvec = "1.10.0"
derive_more = "0.99.17"
either = "1.8.1"
sha2 = "0.10.6"
elliptic-curve = { version = "0.12.*", features = ["serde", "arithmetic"] }
k256 = { version = "0.11.*", features = ["serde"] }
group = "0.11.*"
