[package]
name = "spectrum-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
libp2p = { version = "0.49.0", features = ["ping"] }
async-std = { version = "1.10.0", features = ["attributes"] }
