[package]
name = "spectrum-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
libp2p = { version = "0.51.*", features = ["websocket", "noise", "mplex", "yamux", "ping", "tcp", "dns", "async-std"] }
async-std = { version = "1.10.0", features = ["attributes"] }
spectrum-network = { version = "0.1.0", path = "../spectrum-network" }
rand = "0.8.5"
log = "0.4.17"
log4rs = "1.2.0"
