[package]
name = "spectrum-validation"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-ledger = { version = "0.1.0", path = "../spectrum-ledger" }
nonempty = "0.8.1"
derive_more = "0.99.17"
