[package]
name = "spectrum-view"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
spectrum-crypto = { version = "0.1.0", path = "../spectrum-crypto" }
spectrum-move = { version = "0.1.0", path = "../spectrum-move" }
spectrum-ledger = { version = "0.1.0", path = "../spectrum-ledger" }
futures = "0.3.21"
async-trait = "0.1.68"
async-std = { version = "1.10.0", features = ["attributes"] }
smallvec = "1.10.0"
derive_more = "0.99.17"
either = "1.8.1"
nonempty = "0.8.1"
k256 = { version = "0.13.*", features = ["serde"] }
base16 = "0.2.1"
thiserror = "1.0.34"
serde = { version = "1.0.147", features = ["derive"] }
bincode = "1.3.3"
rocksdb = "0.21.0"
