[package]
name = "spectrum-view"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

[dependencies]
spectrum-crypto = { version = "0.1.0", path = "../spectrum-crypto" }
spectrum-move = { version = "0.1.0", path = "../spectrum-move" }
spectrum-ledger = { version = "0.1.0", path = "../spectrum-ledger" }
spectrum-validation = { version = "0.1.0", path = "../spectrum-validation" }
futures = "0.3.21"
async-trait = "0.1.68"
async-std = { version = "1.10.0", features = ["attributes"] }
smallvec = "1.10.0"
derive_more = "0.99.17"
either = "1.8.1"
bytes = "1.0.1"
ergo-chain-types = "0.11.0"
scorex_crypto_avltree = "0.1.0"
tokio = { version = "1.28.*", features = ["rt", "macros"] }
nonempty = "0.8.1"
k256 = { version = "0.13.*", features = ["serde"] }
base16 = "0.2.1"
thiserror = "1.0.34"
serde = { version = "1.0.147", features = ["derive"] }
bincode = "1.3.3"
rocksdb = "0.21.0"

[dev-dependencies]
rand = "0.8.5"